syntax = "proto3";

option go_package = "multy/api/proto/config";
option java_multiple_files = true;
option java_package = "dev.multy.api.config";
option java_outer_classname = "MultyProto";

package dev.multy.config;

import "google/protobuf/any.proto";


message Config {
  string user_id = 1;
  repeated Resource resources = 2;
}

message Resource {
  string resource_id = 1;
  google.protobuf.Any resource = 2;
}