syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resources";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/common/common.proto";

package dev.multy.resources;

message CreateVirtualNetworkRequest {
  repeated CloudSpecificVirtualNetworkArgs resources = 1;
}

message ReadVirtualNetworkRequest {
  string resource_id = 1;
}

message UpdateVirtualNetworkRequest {
  string resource_id = 1;
  repeated CloudSpecificVirtualNetworkArgs resources = 2;
}

message DeleteVirtualNetworkRequest {
  string resource_id = 1;
}

message CloudSpecificVirtualNetworkArgs {
  common.CloudSpecificResourceCommonArgs common_parameters = 1;
  string name = 2;
  string cidr_block = 3;
}

message CloudSpecificVirtualNetworkResource {
  common.CloudSpecificCommonResourceParameters common_parameters = 1;
  string name = 2;
  string cidr_block = 3;
}

message VirtualNetworkResource {
  common.CommonResourceParameters common_parameters = 1;
  repeated CloudSpecificVirtualNetworkResource resources = 2;
}
